[gd_scene load_steps=7 format=3 uid="uid://bieq0shngjqfc"]

[ext_resource type="Script" uid="uid://d2ps2v47kf60w" path="res://player/attack/star/star.gd" id="1_4mflf"]
[ext_resource type="Texture2D" uid="uid://bidjvdeypd6as" path="res://player/attack/star/star2idle.png" id="2_duipk"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4mflf"]
size = Vector2(24, 22)

[sub_resource type="Animation" id="Animation_gri8x"]
length = 0.001

[sub_resource type="Animation" id="Animation_7fty8"]
resource_name = "star"
length = 0.8
loop_mode = 1

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ksnxk"]
_data = {
&"RESET": SubResource("Animation_gri8x"),
&"star": SubResource("Animation_7fty8")
}

[node name="star" type="Area2D" groups=["attack"]]
top_level = true
collision_layer = 4
collision_mask = 0
script = ExtResource("1_4mflf")
speedSet = 250
damageSet = 5

[node name="Sprite2D" type="Sprite2D" parent="."]
rotation = 1.57079
scale = Vector2(0.741454, 0.763935)
texture = ExtResource("2_duipk")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_4mflf")
disabled = true

[node name="attacktimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 4.0
one_shot = true
autostart = true

[node name="changedirection" type="Timer" parent="."]
unique_name_in_owner = true

[node name="resetpostimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 3.0
autostart = true

[node name="snd_attack" type="AudioStreamPlayer2D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_ksnxk")
}

[connection signal="timeout" from="attacktimer" to="." method="_on_attacktimer_timeout"]
[connection signal="timeout" from="changedirection" to="." method="_on_changedirection_timeout"]
[connection signal="timeout" from="resetpostimer" to="." method="_on_resetpostimer_timeout"]
